# SE-Agent-Studio

./: .gitignore  README.md  SE-Agent Studio：开发前技术设计文档.md  SE-Agent Studio：技术设计文档.md  SE-Agent Studio：面向软件工程全流程的多智能体协作开发平台.md  SE-Agent-Studio-项目详细说明.md  compose.yaml  docker-compose.yml  pnpm-lock.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260325_0001_initial_schema.py  20260325_0002_user_llm_config.py  20260330_0003_llm_agent_model_overrides.py  20260330_0004_llm_agent_runtime_overrides.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: __init__.py  admin.py  artifacts.py  auth.py  llm_config.py  projects.py  router.py  runs.py  system.py
backend/app/core/: config.py  enums.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  agent.py  (+8 more)
backend/app/orchestrators/: __init__.py
backend/app/repositories/: admin_repository.py  artifact_repository.py  catalog_repository.py  llm_config_repository.py  project_repository.py  run_repository.py  user_repository.py
backend/app/schemas/: admin.py  artifact.py  auth.py  catalog.py  common.py  llm_config.py  project.py  run.py  system.py
backend/app/services/: admin_service.py  artifact_service.py  auth_service.py  bootstrap_service.py  catalog_service.py  llm_config_service.py  project_service.py  run_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: bootstrap_data.py  seed_agent_profiles.py
backend/tests/: test_api_smoke.py
(+68 files in other folders)
