[project]
name = "se-agent-studio-backend"
version = "0.1.0"
description = "Backend service for SE-Agent Studio."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pymysql>=1.1,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "PyJWT>=2.9,<3.0",
    "alembic>=1.14,<2.0",
    "celery>=5.4,<6.0",
    "redis>=5.2,<6.0",
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
ai-runtime = [
    "crewai",
]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.7,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
crewai = { path = "../crewAI/lib/crewai", editable = true }
